ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "grafana.devops56.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prom-grafana
                port:
                  number: 80
    - host: "prometheus.devops56.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prom-kube-prometheus-stack-prometheus
                port:
                  number: 9090
